fix: font-size, alignment

--- a/src/styles/_into.scss
+++ b/src/styles/_into.scss
@@ -25,6 +25,7 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      text-align: center;
 
       @include media-sm{
         padding: 1.5rem 0.5rem;
